--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.2.2",
     "react": "^16.11.0",
     "react-adobe-animate": "^2.2.1",
     "react-dom": "^16.11.0",
