--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-twitch-embed-video": "^1.1.2",
     "sass": "^1.23.1"
   },
   "scripts": {
