--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.11.0",
     "react-adobe-animate": "^2.2.1",
     "react-dom": "^16.11.0",
+    "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-twitch-embed-video": "^1.1.2",
