--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "firebase": "^7.2.2",
     "react": "^16.11.0",
     "react-adobe-animate": "^2.2.1",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
     "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.1.2",
