--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "react-adobe-animate": "^2.2.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-input-mask": "^2.0.4",
     "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-twitch-embed-video": "^1.1.2",
+    "react-twitch-stream": "^1.0.4",
     "sass": "^1.23.1"
   },
   "scripts": {
